syntax = "proto3";

package awakari.source.feeds;

option go_package = "./api/grpc/source/feeds";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service Service {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Read(ReadRequest) returns (ReadResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc List(ListRequest) returns (ListResponse);
}

message CreateRequest {
  Feed feed = 1;
}

message CreateResponse {
}

message ReadRequest {
  string url = 1;
}

message ReadResponse {
  Feed feed = 1;
}

message DeleteRequest {
  string url = 1;
  string userId = 2;
}

message DeleteResponse {
}

message ListRequest {
  Filter filter = 1;
  uint32 limit = 2;
  string cursor = 3;
}

message ListResponse {
  repeated Feed page = 1;
}

message Feed {
  string url = 1;
  string title = 2;
  string userId = 3;
  google.protobuf.Duration updatePeriod = 4;
  google.protobuf.Timestamp nextUpdate = 5;
  google.protobuf.Timestamp itemLast = 6;
}

message Filter {
  string userId = 1;
}
